# river-data-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  bacon.toml  docker-compose.yaml
.github/workflows/: publish-container.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20260128_000001_init.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/common/: mod.rs  state.rs
src/entity/: alarm_locations.rs  alarms.rs  calibrations.rs  device_status.rs  events.rs  mod.rs  readings.rs  sensors.rs  stations.rs  sync_state.rs  zones.rs
src/routes/: aggregates.rs  cache.rs  dashboard.rs  health.rs  hierarchy.rs  mod.rs  rate_limit.rs  readings.rs
src/routes/alarms/: handlers.rs  types.rs
src/routes/sensors/: handlers.rs  mod.rs  types.rs
src/routes/stations/: aggregates.rs  handlers.rs  mod.rs  readings.rs  types.rs
src/routes/zones/: handlers.rs  mod.rs  types.rs
src/services/: cache.rs  mod.rs  rate_limit.rs
src/sync/: scheduler.rs  worker.rs
src/vaisala/: client.rs  mod.rs  models.rs
tests/: cache_unit_test.rs
